force-app/main/default/objects/InvoiceFooter__mdt/InvoiceFooter__mdt.object-meta.xml
<CustomObject>
    <label>InvoiceFooter</label>
    <pluralLabel>InvoiceFooters</pluralLabel>
</CustomObject>