force-app/main/default/objects/InvoiceFooter__mdt/fields/Acct_No_with_UBA__c.field-meta.xml
<CustomField>
    <fullName>Acct_No_with_UBA__c</fullName>
    <label>Acct No with UBA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>