force-app/main/default/objects/InvoiceFooter__mdt/fields/Bank_Adress__c.field-meta.xml
<CustomField>
    <fullName>Bank_Adress__c</fullName>
    <label>Bank Adress</label>
    <length>100</length>
    <type>Text</type>
</CustomField>