force-app/main/default/objects/InvoiceFooter__mdt/fields/Swift_code__c.field-meta.xml
<CustomField>
    <fullName>Swift_code__c</fullName>
    <label>Swift code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>